Implemented exporting Invoice.pdf and importing Users.xlsx

--- a/EventManagementSystemApp/EventManagementSystem/appsettings.json
+++ b/EventManagementSystemApp/EventManagementSystem/appsettings.json
@@ -14,5 +14,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailSettings": {
+    "SmtpServer": "smtp.office365.com",
+    "SmtpServerPort": 587,
+    "SmtpUserName": "eventmanagementsystem2025@outlook.com",
+    "SmtpPassword": "Eventmanagementsystem123#",
+    "EnableSsl": true,
+    "EmailDisplayName": "Event Management System Application",
+    "SendersName": "Event Management System Application"
+  },
   "AllowedHosts": "*"
 }
