--- a/EventManagementSystemApp/EMS.Service/EMS.Service.csproj
+++ b/EventManagementSystemApp/EMS.Service/EMS.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.9.0" />
+    <PackageReference Include="MimeKit" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EMS.Domain\EMS.Domain.csproj" />
     <ProjectReference Include="..\EMS.Repository\EMS.Repository.csproj" />
   </ItemGroup>
