--- a/EventManagementSystemAdminApp/EventManagementSystemAdminApp/EventManagementSystemAdminApp.csproj
+++ b/EventManagementSystemAdminApp/EventManagementSystemAdminApp/EventManagementSystemAdminApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
     <PackageReference Include="GemBox.Document" Version="35.0.1946" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
